# firefox

./: .gitignore  .prettierignore  .stylelintrc.js  CLOBBER  Cargo.toml  build.gradle  eslint-ignores.config.mjs  eslint-rollouts.config.mjs  gradle.properties  icefox.mozconfig  mots.yaml  stylelint-rollouts.config.js
.cargo/: config.toml.in
accessible/generic/: DocAccessible.cpp  ImageAccessible.cpp  LocalAccessible.cpp
accessible/html/: HTMLLinkAccessible.cpp
accessible/mac/: Platform.mm
browser/: confvars.sh  moz.configure
browser/actors/: ContextMenuChild.sys.mjs
browser/components/: BrowserComponents.manifest  DesktopActorRegistry.sys.mjs
browser/installer/: package-manifest.in
browser/locales/: jar.mn  l10n-changesets.json
browser/locales-preview/: backupSettings.ftl  privacyPreferences.ftl
browser/modules/: PopupAndRedirectBlockerObserver.sys.mjs  PopupBlockerObserver.sys.mjs  moz.build
docshell/base/: BrowsingContext.cpp  BrowsingContext.h  CanonicalBrowsingContext.cpp  nsDocShell.cpp
docshell/shistory/: nsSHistory.cpp  (+4 more)
dom/: metrics.yaml
gradle/: libs.versions.toml
image/: SVGDocumentWrapper.cpp  SVGDocumentWrapper.h
mfbt/: ArrayUtils.h  Attributes.h  LinkedList.h  Maybe.h  Vector.h
netwerk/: metrics.yaml
security/: nss.symbols
security/manager/ssl/tests/unit/pkcs11testmodule/: Cargo.toml
security/manager/ssl/tests/unit/pkcs11testmodule/src/: backend.rs  lib.rs
supply-chain/: audits.toml  config.toml
taskcluster/: config.yml
testing/: mach_commands.py  skipfails.py
toolkit/: moz.configure
widget/: EventMessageList.h
(+1506 files in other folders)
